# sbeditor

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  zensical.toml
docs/: index.md  installation.md  opening.md  start.md
docs/zensical/: index.md
src/: block.rs  broadcast.rs  comment.rs  costume.rs  error.rs  extension.rs  field.rs  input.rs  lib.rs  list.rs  main.rs  meta.rs  monitor.rs  mutation.rs  prim.rs  project.rs  sound.rs  sprite.rs  var.rs
tests/: bima.rs  dashion.rs  import.rs  open.rs
tests/fixtures/: NEW BEST! _ Part 1 for BIMA.sb3  dashion.sb3  new.sb3
