[package]
name = "sbeditor"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "Scratch project editing library"
authors = ["faretek1"]
repository = "https://github.com/scratch-api/sbeditor"
homepage = "https://scratchapi.org/sbeditor/"
readme = "README.md"

[dependencies]
itertools = "0.14.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.20"
serde_tuple = "1.1.3"
zip = "7.4.0"
